[REFACTOR] Refactored Controller with DTO and mapper